--- a/style.css
+++ b/style.css
@@ -4,8 +4,7 @@
     padding: 0;
   }
   
-  html,
-  body {
+  html, body {
     font-family: Arial, Helvetica, sans-serif;
   }
   
@@ -20,8 +19,7 @@
     align-items: center;
   }
   
-  h1,
-  h3 {
+  h1, h3 {
     margin-bottom: 1rem;
     font-weight: normal;
   }
