--- a/style.css
+++ b/style.css
@@ -20,16 +20,18 @@ h1, h3 {
 }
 
 #main-nav-bar {
-  margin-left: 10%;
-  width: 80%;
+  /* width: 80vw; */
+  min-width: 820px;
+  max-width: 950px;
   height: 60px;
   background-color: #333;
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: center;
-  border-radius: 32px;
+  border-radius: 22px;
   margin-top: 2em;
+  padding: auto;
 }
 
 button {
@@ -39,9 +41,7 @@ button {
   color: white;
   font-size: 18px;
   border: 0;
-  padding: 0.7em 6em;
-  margin-left: 7px;
-  margin-right: 7px;
+  padding: 0.7em 4.5em;
 }
 
 button:focus {
