--- a/style.css
+++ b/style.css
@@ -56,8 +56,41 @@ button.selected {
   background: #00bcd4;
 }
 
-@media screen and (max-width: 200px) {
-  #main-nav-bar {
-    width: 100%;
-  }
+/* Index card view for trending today section*/
+.card {
+  width: 100%;
+  height: 100%;
+  border-radius: 22px;
+  background-color: #fafafa;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 1rem;
+  padding: 1rem;
+  box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.2);
+}
+
+.trending-today-container {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap;
+}
+
+.trending-today-item {
+  width: calc(50% - 1rem);
+  height: calc(50% - 1rem);
+  border-radius: 22px;
+  background-color: #fafafa;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 1rem;
+  padding: 1rem;
+  box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.2);
 }
