--- a/style.css
+++ b/style.css
@@ -13,20 +13,21 @@ html, body {
   align-items: center;
 }
 
-h1, h3 {
+h1, h2, h3 {
   margin-bottom: 1rem;
   font-weight: normal;
   text-align: center;
 }
 
 #main-nav-bar {
-  /* width: 80vw; */
+  margin-left: 30px;
   min-width: 820px;
   max-width: 950px;
   height: 60px;
   background-color: #333;
   display: flex;
   flex-direction: row;
+  text-align: center;
   align-items: center;
   justify-content: center;
   border-radius: 22px;
@@ -57,32 +58,22 @@ button.selected {
 }
 
 /* Index card view for trending today section*/
-.card {
-  width: 100%;
-  height: 100%;
-  border-radius: 22px;
-  background-color: #fafafa;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  margin-bottom: 1rem;
-  padding: 1rem;
-  box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.2);
-}
-
 .trending-today-container {
-  width: 100%;
+  margin-left: 10vw;
+  width: 80vw;
+  max-width: 950px;
   height: 100%;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
-  flex-wrap: wrap;
+  flex-wrap: nowrap;
 }
 
 .trending-today-item {
-  width: calc(50% - 1rem);
+  width: calc(30% - 1rem);
+  min-width: calc(25% - 1rem);
+  max-width: calc(40% - 1rem);
   height: calc(50% - 1rem);
   border-radius: 22px;
   background-color: #fafafa;
@@ -93,4 +84,62 @@ button.selected {
   margin-bottom: 1rem;
   padding: 1rem;
   box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.2);
+}
+
+.testimonials-container {
+  margin-left: 10vw;
+  width: 80vw;
+  max-width: 950px;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: nowrap;
+}
+
+.testimonial-item {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: nowrap;
+  border-radius: 10px;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.2);
+}
+
+  /* testimonial user picture */
+.user-picture {
+  width: calc(30% - 1rem);
+  min-width: calc(25% - 1rem);
+  max-width: calc(40% - 1rem);
+  height: calc(50% - 1rem);
+  border-radius: 22px;
+  background-color: #fafafa9e;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 1rem;
+  padding: 1rem;
+}
+
+  /* testimonial user name and comment */
+.user-name-comment {
+  width: calc(70% - 1rem);
+  min-width: calc(65% - 1rem);
+  max-width: calc(80% - 1rem);
+  height: calc(50% - 1rem);
+  border-radius: 22px;
+  background-color: #fafafa;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 1rem;
+  padding: 1rem;
 }
