--- a/style.css
+++ b/style.css
@@ -57,7 +57,7 @@ button.selected {
   background: #00bcd4;
 }
 
-.vertical_container {
+.vertical-container {
   margin-left: 10vw;
   width: 80vw;
   max-width: 950px;
@@ -69,7 +69,7 @@ button.selected {
   flex-wrap: nowrap;
 }
 
-.vertical_card {
+.vertical-card {
   width: calc(30% - 1rem);
   min-width: calc(25% - 1rem);
   max-width: calc(40% - 1rem);
@@ -85,7 +85,7 @@ button.selected {
   box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.2);
 }
 
-.horizontal_container {
+.horizontal-container {
   margin-left: 10vw;
   width: 80vw;
   max-width: 950px;
@@ -97,7 +97,7 @@ button.selected {
   flex-wrap: nowrap;
 }
 
-.horizontal_card {
+.horizontal-card {
   width: 100%;
   height: 100%;
   display: flex;
@@ -141,12 +141,11 @@ button.selected {
   padding: 1rem;
 }
 
-/* form styling for the near me page */
-#form {
+/* form styling for the catalogue area */
+#filter-catalogue {
   padding: 15px;
-  margin-left: 30px;
   font-size: 20px;
-  margin-right: 600px;
+  text-align: center;
 }
 
 .text{
