--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ html, body {
 }
 
 #app {
-  width: 400px;
+  width: 100vmax;
   height: 100%;
   margin: auto;
   text-align: center;
@@ -77,8 +77,9 @@ h1, h2, h3 {
   align-items: center;
   justify-content: center;
   border-radius: 22px;
-  margin-top: 2em;
+  margin-top: 1em;
   padding: auto;
+  word-spacing: 30px;
 }
 
 button {
@@ -89,7 +90,10 @@ button {
   font-size: 18px;
   border: 0;
   padding: 0.7em 2.5em;
-  width: 260px;
+  padding-left: 20px;
+  padding-right: 20px;
+  width: auto;
+  min-width: 190px;
 }
 
 button:focus {
@@ -117,10 +121,10 @@ button.selected {
 
 .vertical-card {
   width: calc(30% - 1rem);
-  min-width: calc(25% - 1rem);
-  max-width: calc(40% - 1rem);
+  min-width: 200px;
+  max-width: 400px;
   height: calc(50% - 1rem);
-  border-radius: 22px;
+  border-radius: 15px;
   background-color: #fafafa;
   display: flex;
   flex-direction: column;
