--- a/style.css
+++ b/style.css
@@ -165,10 +165,17 @@ button.selected {
   box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.2);
 }
 
-@media screen and (max-width: 800px) {
+@media screen and (max-width: 600px) {
   /* modify ui for mobile */
+
+  body {
+    /* disable horizontal scrolling */
+    overflow-x: hidden;
+    margin: 0 auto;
+  }
+
   #app {
-    width: 100%;
+    width: 95%;
     height: 100%;
   }
 
@@ -178,6 +185,16 @@ button.selected {
 
   #main-nav-bar {
     width: 100%;
+    position: sticky;
+    top: 15px;
+  }
+
+  button {
+    min-width: 60px;
+    font-size: 12px;
+    padding: 0.7em 2em;
+    padding-left: 3px;
+    padding-right: 3px;
   }
 
   .side-nav {
@@ -185,10 +202,6 @@ button.selected {
     height: 100vh;
     overflow-y: hidden;
     overflow-x: hidden;
-  }
-
-  button {
-    font-size: 14px;
   }
 
   .vertical-container {
@@ -201,7 +214,7 @@ button.selected {
   }
 
   .vertical-card {
-    width: 60%;
+    width: 90%;
   }
   
   .horizontal-container {
