--- a/style.css
+++ b/style.css
@@ -166,11 +166,31 @@ button.selected {
   box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.2);
 }
 
+.data-entry-area {
+  width: 300px;
+  height: 30px;
+}
+
 @media screen and (max-width: 600px) {
   /* modify ui for mobile */
 
+  * {
+    width: 95%;
+  }
+
+  html {
+    margin: 0 auto;
+  }
+
   body {
     /* disable horizontal scrolling */
+    width: 100%;
+    overflow-x: hidden;
+    margin: 0 auto;
+  }
+
+  footer {
+    width: 90vw;
     overflow-x: hidden;
     margin: 0 auto;
   }
@@ -178,10 +198,15 @@ button.selected {
   #app {
     width: 95%;
     height: 100%;
+    margin: 0 auto;
   }
 
   #fixed-button {
     left: 25px;
+    bottom: 30px;
+    font-size: small;
+    width: 80px;
+    position: fixed;
   }
 
   #page-content {
@@ -215,7 +240,7 @@ button.selected {
   }
 
   section > .vertical-container {
-    width: 90%;
+    width: 95%;
     flex-direction: column;
     justify-content: center;
     align-items: center;
@@ -224,18 +249,28 @@ button.selected {
   }
 
   .vertical-card {
-    width: 90%;
+    width: 95%;
   }
   
   section > .horizontal-container {
-    width: 90%;
+    width: 95%;
   }
 
   .horizontal-card {
-    width: 90%;
+    width: 95%;
+  }
+  
+  /* minor adjustments for testimonial form */
+  #review {
+    width: 95%;
+    margin: 0 auto;
   }
 
-  #review {
-    width: 100%;
+  .data-entry-area {
+    width: 200px;
+  }
+
+  textarea.data-entry-area {
+    height: 100px;
   }
 }
