--- a/style.css
+++ b/style.css
@@ -173,6 +173,15 @@ button.selected {
   box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.2);
 }
 
+#filter-catalogue {
+  min-width: 250px;
+}
+
+.selection-list {
+  margin-top: 5px;
+  width: fit-content;
+}
+
 .data-entry-area {
   width: 300px;
   height: 30px;
@@ -208,19 +217,11 @@ button.selected {
     margin: 0 auto;
   }
 
-  #fixed-button {
-    left: 25px;
-    bottom: 30px;
-    font-size: small;
-    width: 80px;
-    position: fixed;;
-  }
-
   #page-content {
     width: 95%;
     padding-left: 0;
     padding-right: 0;
-    margin: 0 auto;
+    margin: 0;
     justify-content: center;
   }
 
@@ -228,14 +229,23 @@ button.selected {
     width: 100%;
     position: sticky;
     top: 15px;
+    word-spacing: 5px;
   }
 
   button {
-    min-width: 75px;
-    font-size: 12px;
+    min-width: 85px;
+    font-size: 14px;
     padding: 0.7em 2em;
-    padding-left: 3px;
-    padding-right: 3px;
+    padding-left: 4px;
+    padding-right: 4px;
+  }
+
+  #fixed-button {
+    left: 25px;
+    bottom: 30px;
+    font-size: small;
+    width: 60px;
+    position: fixed;;
   }
 
   .side-nav {
