--- a/style.css
+++ b/style.css
@@ -22,6 +22,11 @@ footer {
   border-radius: 10px;
 }
 
+section {
+  background-color: white;
+  border-radius: 15px;
+}
+
 h1, h2, h3 {
   margin: 0 auto;
   margin-bottom: 1rem;
