--- a/style.css
+++ b/style.css
@@ -13,15 +13,6 @@ body {
   align-items: center;
 }
 
-footer {
-  position: relative;
-  bottom: 0;
-  width: 100%;
-  margin: 0 auto;
-  background-color: white;
-  border-radius: 10px;
-}
-
 section {
   background-color: white;
   border-radius: 15px;
@@ -254,12 +245,26 @@ option {
   height: 30px;
 }
 
+footer {
+  position: relative;
+  bottom: 0;
+  width: 100%;
+  margin: 0 auto;
+  background-color: white;
+  border-radius: 10px;
+}
+
+footer > * > .vertical-container {
+  width: min-content;
+}
+
+footer > a {
+  max-width: 30px;
+}
+
+
 @media screen and (max-width: 600px) {
   /* modify ui for mobile */
-
-  * {
-    width: 95%;
-  }
 
   html {
     margin: 0 auto;
@@ -315,8 +320,8 @@ option {
   }
 
   .side-nav {
-    width: 100%;
-    height: 96vh;
+    width: 95%;
+    height: 100vh;
     overflow-y: hidden;
     overflow-x: hidden;
   }
@@ -328,6 +333,8 @@ option {
 
   /* disable vertical page scrolling for chat area */
   #chatbot-area {
+    width: 100vw;
+    height: 92vh;
     overflow-y: hidden;
     overflow-x: hidden;
   }
