--- a/style.css
+++ b/style.css
@@ -320,8 +320,8 @@ footer > a {
   }
 
   .side-nav {
-    width: 95%;
-    height: 100vh;
+    width: 100vw;
+    height: 92vh;
     overflow-y: hidden;
     overflow-x: hidden;
   }
@@ -334,7 +334,6 @@ footer > a {
   /* disable vertical page scrolling for chat area */
   #chatbot-area {
     width: 100vw;
-    height: 92vh;
     overflow-y: hidden;
     overflow-x: hidden;
   }
